modified by change branch

--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <Html>  
 <head>   
 <title>  
-Registration Page  
+User Registration Page  
 </title>  
 </head>  
 <body bgcolor="Lightskyblue">  
