--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
 User Registration Page  
 </title>  
 </head>  
-<body bgcolor="Lightskyblue">  
+<body bgcolor="LightGreen">  
 <br>  
 <br>  
 <form>  
